--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.kuohsuanlo</groupId>
-  <artifactId>cyberpunkcity</artifactId>
+  <artifactId>cyberworld</artifactId>
   <version>1.0.0</version>
-  <name>CyberpunkCity</name>
-  <url>http://dev.bukkit.org/bukkit-plugins/cyberpunkcity/</url>
+  <name>CyberWorld</name>
+  <url>http://dev.bukkit.org/bukkit-plugins/cyberworld/</url>
 
   <repositories>
     <repository>
