--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,3 @@
-name: CyberpunkCityGenerator
-main: io.github.kuohsuanlo.cyberpunkcity.CyberpunkCityGenerator
+name: CyberWorld
+main: io.github.kuohsuanlo.cyberworld.CyberWorldGenerator
 version: ${version}
