--- a/.classpath
+++ b/.classpath
@@ -32,6 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/worldedit-bukkit-6.1.3.jar"/>
+	<classpathentry kind="lib" path="D:/workspace/CyberWorld/lib/worldedit-bukkit-6.1.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
