--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.kuohsuanlo</groupId>
   <artifactId>cyberworld</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.0ac</version>
   <name>CyberWorld</name>
   <url>http://dev.bukkit.org/bukkit-plugins/cyberworld/</url>
 
